Added image snapper tool.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ target_link_libraries(autodimplepi wiringPi)
 add_executable(algorithmtest AlgorithmTest.cpp)
 target_link_libraries(algorithmtest ${raspicam_CV_LIBS})
 target_link_libraries(algorithmtest wiringPi)
+add_executable(snap Snap.cpp)
+target_link_libraries(snap ${raspicam_CV_LIBS})
+target_link_libraries(snap wiringPi)
 
 SET(CMAKE_C_COMPILER /usr/bin/gcc)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
